--- a/disclaimer.htm
+++ b/disclaimer.htm
@@ -140,16 +140,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-10-31-node-share.htm" title="VPN设备 | 10月31日18.9M/S|免费VPN/Shadowrocket节点/SSR节点/Clash节点/V2ray节点/Singbox节点免费节点订阅分享">VPN设备 | 10月31日18.9M/S|免费VPN/Shadowrocket节点/SSR节点/Clash节点/V2ray节点/Singbox节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-12-vpn-proxy.htm" title="VPN设备 | 10月12日22.5M/S|免费VPN/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点/Clash节点免费节点订阅分享">VPN设备 | 10月12日22.5M/S|免费VPN/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点/Clash节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-16-vpn-node.htm" title="VPN设备 | 10月16日20.8M/S|免费VPN/Singbox节点/Clash节点/SSR节点/V2ray节点/Shadowrocket节点免费节点订阅分享">VPN设备 | 10月16日20.8M/S|免费VPN/Singbox节点/Clash节点/SSR节点/V2ray节点/Shadowrocket节点免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-9-mianfei-vpn.htm" title="VPN设备 | 10月9日22.1M/S|免费VPN/SSR节点/Shadowrocket节点/Singbox节点/V2ray节点/Clash节点免费节点订阅分享">VPN设备 | 10月9日22.1M/S|免费VPN/SSR节点/Shadowrocket节点/Singbox节点/V2ray节点/Clash节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-17-top-vpn-node.htm" title="VPN设备 | 10月17日19.4M/S|免费VPN/SSR节点/Singbox节点/Clash节点/V2ray节点/Shadowrocket节点免费节点订阅分享">VPN设备 | 10月17日19.4M/S|免费VPN/SSR节点/Singbox节点/Clash节点/V2ray节点/Shadowrocket节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-18-share-vpn.htm" title="VPN设备 | 10月18日18M/S|免费VPN/Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点免费节点订阅分享">VPN设备 | 10月18日18M/S|免费VPN/Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-1-top-vpn.htm" title="VPN设备 | 11月1日21.6M/S|免费VPN/V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Singbox节点免费节点订阅分享">VPN设备 | 11月1日21.6M/S|免费VPN/V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Singbox节点免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-13-node-share.htm" title="VPN设备 | 10月13日18.8M/S|免费VPN/Shadowrocket节点/Singbox节点/Clash节点/SSR节点/V2ray节点免费节点订阅分享">VPN设备 | 10月13日18.8M/S|免费VPN/Shadowrocket节点/Singbox节点/Clash节点/SSR节点/V2ray节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-8-vpn-node.htm" title="VPN设备 | 10月8日20.7M/S|免费VPN/SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点免费节点订阅分享">VPN设备 | 10月8日20.7M/S|免费VPN/SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-15-vpn-proxy.htm" title="VPN设备 | 10月15日21.5M/S|免费VPN/SSR节点/Clash节点/Shadowrocket节点/V2ray节点/Singbox节点免费节点订阅分享">VPN设备 | 10月15日21.5M/S|免费VPN/SSR节点/Clash节点/Shadowrocket节点/V2ray节点/Singbox节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-2-vpn-proxy.htm" title="VPN设备 | 11月2日19.1M/S|免费VPN/Shadowrocket节点/V2ray节点/SSR节点/Clash节点/Singbox节点免费节点订阅分享">VPN设备 | 11月2日19.1M/S|免费VPN/Shadowrocket节点/V2ray节点/SSR节点/Clash节点/Singbox节点免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-26-node-share-links.htm" title="VPN设备 | 10月26日21.2M/S|免费VPN/V2ray节点/SSR节点/Clash节点/Shadowrocket节点/Singbox节点免费节点订阅分享">VPN设备 | 10月26日21.2M/S|免费VPN/V2ray节点/SSR节点/Clash节点/Shadowrocket节点/Singbox节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-1-top-vpn.htm" title="VPN设备 | 11月1日21.6M/S|免费VPN/V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Singbox节点免费节点订阅分享">VPN设备 | 11月1日21.6M/S|免费VPN/V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Singbox节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-23-vpn-proxy.htm" title="VPN设备 | 10月23日21.6M/S|免费VPN/Clash节点/SSR节点/Singbox节点/V2ray节点/Shadowrocket节点免费节点订阅分享">VPN设备 | 10月23日21.6M/S|免费VPN/Clash节点/SSR节点/Singbox节点/V2ray节点/Shadowrocket节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-17-top-vpn-node.htm" title="VPN设备 | 10月17日19.4M/S|免费VPN/SSR节点/Singbox节点/Clash节点/V2ray节点/Shadowrocket节点免费节点订阅分享">VPN设备 | 10月17日19.4M/S|免费VPN/SSR节点/Singbox节点/Clash节点/V2ray节点/Shadowrocket节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-3-vpn-github.htm" title="VPN设备 | 11月3日18.9M/S|免费VPN/Shadowrocket节点/V2ray节点/SSR节点/Singbox节点/Clash节点免费节点订阅分享">VPN设备 | 11月3日18.9M/S|免费VPN/Shadowrocket节点/V2ray节点/SSR节点/Singbox节点/Clash节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-24-free-node-subscribe.htm" title="VPN设备 | 10月24日20M/S|免费VPN/Shadowrocket节点/Singbox节点/SSR节点/V2ray节点/Clash节点免费节点订阅分享">VPN设备 | 10月24日20M/S|免费VPN/Shadowrocket节点/Singbox节点/SSR节点/V2ray节点/Clash节点免费节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -161,7 +161,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">6</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">12</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
