--- a/free-nodes/page-4.htm
+++ b/free-nodes/page-4.htm
@@ -111,6 +111,96 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-10">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-10-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 10月10日22.6M/S|免费VPN/Shadowrocket节点/SSR节点/Singbox节点/Clash节点/V2ray节点免费节点订阅分享" src="/uploads/20241222-1/a621dbd095b5853e39cd840d5e02d439.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-10-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 10月10日22.6M/S|免费VPN/Shadowrocket节点/SSR节点/Singbox节点/Clash节点/V2ray节点免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了韩国、日本、欧洲、香港、美国、新加坡、加拿大等地区,最高速度可达22.6 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-09">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-9-mianfei-vpn.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 10月9日22.1M/S|免费VPN/SSR节点/Shadowrocket节点/Singbox节点/V2ray节点/Clash节点免费节点订阅分享" src="/uploads/20241222-1/8d67d6a7bd5b99658b08a2aefb0804ae.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-9-mianfei-vpn.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 10月9日22.1M/S|免费VPN/SSR节点/Shadowrocket节点/Singbox节点/V2ray节点/Clash节点免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了美国、新加坡、韩国、日本、加拿大、欧洲、香港等地区,最高速度可达22.1 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-08">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-8-vpn-node.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 10月8日20.7M/S|免费VPN/SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点免费节点订阅分享" src="/uploads/20241222-1/ae775f129fc26565e44171425f168292.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-8-vpn-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 10月8日20.7M/S|免费VPN/SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、欧洲、香港、新加坡、美国、韩国、日本等地区,最高速度可达20.7 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-07">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-7-node-share-links.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 10月7日20M/S|免费VPN/SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点免费节点订阅分享" src="/uploads/20241222-1/9e2b225d869222c8f450f1935366fea1.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-7-node-share-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 10月7日20M/S|免费VPN/SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了美国、日本、香港、加拿大、欧洲、韩国、新加坡等地区,最高速度可达20 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-06">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-6-node-share.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 10月6日18.3M/S|免费VPN/Clash节点/SSR节点/V2ray节点/Singbox节点/Shadowrocket节点免费节点订阅分享" src="/uploads/20241222-1/35f2ca1dcee5e084eaf1ccbd9a4339cc.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-6-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 10月6日18.3M/S|免费VPN/Clash节点/SSR节点/V2ray节点/Singbox节点/Shadowrocket节点免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了日本、美国、欧洲、韩国、加拿大、新加坡、香港等地区,最高速度可达18.3 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-05">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-5-vpn-github.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 10月5日20.9M/S|免费VPN/Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点免费节点订阅分享" src="/uploads/20241222-1/8d67d6a7bd5b99658b08a2aefb0804ae.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-5-vpn-github.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 10月5日20.9M/S|免费VPN/Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、日本、美国、韩国、香港、新加坡、欧洲等地区,最高速度可达20.9 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-10-04">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-10-4-vpn-node.htm" class="xcblog-blog-url">
@@ -151,16 +241,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-10-27-free-node-subscribe-links.htm" title="VPN设备 | 10月27日21.6M/S|免费VPN/Singbox节点/V2ray节点/SSR节点/Shadowrocket节点/Clash节点免费节点订阅分享">VPN设备 | 10月27日21.6M/S|免费VPN/Singbox节点/V2ray节点/SSR节点/Shadowrocket节点/Clash节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-18-share-vpn.htm" title="VPN设备 | 10月18日18M/S|免费VPN/Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点免费节点订阅分享">VPN设备 | 10月18日18M/S|免费VPN/Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-25-top-vpn.htm" title="VPN设备 | 10月25日21.1M/S|免费VPN/V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Singbox节点免费节点订阅分享">VPN设备 | 10月25日21.1M/S|免费VPN/V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Singbox节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-10-free-node-subscribe.htm" title="VPN设备 | 11月10日22.9M/S|免费VPN/Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点免费节点订阅分享">VPN设备 | 11月10日22.9M/S|免费VPN/Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-1-top-vpn.htm" title="VPN设备 | 11月1日21.6M/S|免费VPN/V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Singbox节点免费节点订阅分享">VPN设备 | 11月1日21.6M/S|免费VPN/V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Singbox节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-14-free-node-subscribe.htm" title="VPN设备 | 10月14日18.8M/S|免费VPN/Clash节点/Shadowrocket节点/SSR节点/Singbox节点/V2ray节点免费节点订阅分享">VPN设备 | 10月14日18.8M/S|免费VPN/Clash节点/Shadowrocket节点/SSR节点/Singbox节点/V2ray节点免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-31-node-share.htm" title="VPN设备 | 10月31日18.9M/S|免费VPN/Shadowrocket节点/SSR节点/Clash节点/V2ray节点/Singbox节点免费节点订阅分享">VPN设备 | 10月31日18.9M/S|免费VPN/Shadowrocket节点/SSR节点/Clash节点/V2ray节点/Singbox节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-23-vpn-proxy.htm" title="VPN设备 | 10月23日21.6M/S|免费VPN/Clash节点/SSR节点/Singbox节点/V2ray节点/Shadowrocket节点免费节点订阅分享">VPN设备 | 10月23日21.6M/S|免费VPN/Clash节点/SSR节点/Singbox节点/V2ray节点/Shadowrocket节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-24-free-node-subscribe.htm" title="VPN设备 | 10月24日20M/S|免费VPN/Shadowrocket节点/Singbox节点/SSR节点/V2ray节点/Clash节点免费节点订阅分享">VPN设备 | 10月24日20M/S|免费VPN/Shadowrocket节点/Singbox节点/SSR节点/V2ray节点/Clash节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-22-mianfei-vpn.htm" title="VPN设备 | 10月22日18.1M/S|免费VPN/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点/SSR节点免费节点订阅分享">VPN设备 | 10月22日18.1M/S|免费VPN/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点/SSR节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-5-vpn-github.htm" title="VPN设备 | 10月5日20.9M/S|免费VPN/Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点免费节点订阅分享">VPN设备 | 10月5日20.9M/S|免费VPN/Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-26-node-share-links.htm" title="VPN设备 | 10月26日21.2M/S|免费VPN/V2ray节点/SSR节点/Clash节点/Shadowrocket节点/Singbox节点免费节点订阅分享">VPN设备 | 10月26日21.2M/S|免费VPN/V2ray节点/SSR节点/Clash节点/Shadowrocket节点/Singbox节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-6-node-share.htm" title="VPN设备 | 11月6日20.2M/S|免费VPN/Shadowrocket节点/Clash节点/Singbox节点/SSR节点/V2ray节点免费节点订阅分享">VPN设备 | 11月6日20.2M/S|免费VPN/Shadowrocket节点/Clash节点/Singbox节点/SSR节点/V2ray节点免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-21-vpn-github.htm" title="VPN设备 | 10月21日21.7M/S|免费VPN/SSR节点/Clash节点/Singbox节点/Shadowrocket节点/V2ray节点免费节点订阅分享">VPN设备 | 10月21日21.7M/S|免费VPN/SSR节点/Clash节点/Singbox节点/Shadowrocket节点/V2ray节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-4-vpn-node.htm" title="VPN设备 | 10月4日20.3M/S|免费VPN/V2ray节点/Shadowrocket节点/Singbox节点/Clash节点/SSR节点免费节点订阅分享">VPN设备 | 10月4日20.3M/S|免费VPN/V2ray节点/Shadowrocket节点/Singbox节点/Clash节点/SSR节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-6-node-share.htm" title="VPN设备 | 10月6日18.3M/S|免费VPN/Clash节点/SSR节点/V2ray节点/Singbox节点/Shadowrocket节点免费节点订阅分享">VPN设备 | 10月6日18.3M/S|免费VPN/Clash节点/SSR节点/V2ray节点/Singbox节点/Shadowrocket节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-22-mianfei-vpn.htm" title="VPN设备 | 10月22日18.1M/S|免费VPN/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点/SSR节点免费节点订阅分享">VPN设备 | 10月22日18.1M/S|免费VPN/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点/SSR节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-17-top-vpn-node.htm" title="VPN设备 | 10月17日19.4M/S|免费VPN/SSR节点/Singbox节点/Clash节点/V2ray节点/Shadowrocket节点免费节点订阅分享">VPN设备 | 10月17日19.4M/S|免费VPN/SSR节点/Singbox节点/Clash节点/V2ray节点/Shadowrocket节点免费节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -172,7 +262,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">6</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">12</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
